platforms/drm: handle disabled outputs better

BUG: 442603
(cherry picked from commit d55011ae86246c47b65a150cc5f5a2baa9f3c16c)